--- a/BullCowGame/BullCowGame.vcxproj
+++ b/BullCowGame/BullCowGame.vcxproj
@@ -126,6 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FBullCowGame.h" />
+    <ClInclude Include="FMyHiddenWordList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
